force-app/main/default/objects/SMS_Job__c/SMS_Job__c.object-meta.xml
<CustomObject>
    <label>SMS Job</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>