force-app/main/default/objects/SMS_Job__c/fields/FromAccount__c.field-meta.xml
<CustomField>
    <fullName>FromAccount__c</fullName>
    <label>From Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>