force-app/main/default/objects/SMS_Job__c/fields/RC_SMS_Id__c.field-meta.xml
<CustomField>
    <fullName>RC_SMS_Id__c</fullName>
    <label>RC SMS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>