force-app/main/default/objects/SMS_Job__c/fields/SMS_Sequence_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sequence_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sequence</label>
    <referenceTo>SMS_Sequence_Template__c</referenceTo>
    <relationshipLabel>SMS Jobs</relationshipLabel>
    <relationshipName>SMS_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>