force-app/main/default/objects/SMS_Job__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Time Zone</label>
    <length>99</length>
    <type>Text</type>
</CustomField>