force-app/main/default/objects/SMS_Job__c/fields/ToPhone__c.field-meta.xml
<CustomField>
    <fullName>ToPhone__c</fullName>
    <label>To Phone</label>
    <length>32</length>
    <type>Text</type>
</CustomField>